fixed problem with vercel deployment

--- a/src/app/components/ProjectCardComponent.module.css
+++ b/src/app/components/ProjectCardComponent.module.css
@@ -55,7 +55,7 @@
 .ProjectTagsTitleContainer {
     width: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .ProjectTagsTitle {
