--- a/src/app/sections/ProjectsSection.module.css
+++ b/src/app/sections/ProjectsSection.module.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     z-index: 4;
 }
 
@@ -57,7 +57,7 @@
 .projectRow {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     width: max-content;
     gap: 25px;
 }
