- Fixed project cards sizing issue for the project tags - Updated the top bar component with a new mobile view and modal - Added a new page for blogs (Coming Soon)

--- a/src/app/components/ProjectCardComponent.module.css
+++ b/src/app/components/ProjectCardComponent.module.css
@@ -42,6 +42,7 @@
 
 .ProjectTagsContainer {
     width: 100%;
+    height: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,6 +51,8 @@
 
 .ProjectTags {
     width: 300px;
+    height: max-content;
+
 }
 
 .ProjectTagsTitleContainer {
