--- a/src/app/components/SkillsComponent.module.css
+++ b/src/app/components/SkillsComponent.module.css
@@ -22,3 +22,11 @@
     flex-wrap: wrap;
     gap: 10px;
 }
+
+@media screen and (max-width: 768px) {
+
+    .SkillsRow {
+        flex-direction: column;
+    }
+    
+}
