--- a/src/app/sections/ProjectsSection.module.css
+++ b/src/app/sections/ProjectsSection.module.css
@@ -8,6 +8,7 @@
     padding: 50px;
     padding-inline: 200px;
     padding-bottom: 150px;
+    
 }
 
 .titleRow {
@@ -66,6 +67,7 @@
 @media (max-width: 768px) {
     .contentArea {
         padding: 25px;
+        padding-top: 0;
     }
 
     .title {
