--- a/src/app/components/ProjectCardComponent.module.css
+++ b/src/app/components/ProjectCardComponent.module.css
@@ -24,6 +24,8 @@
 
 .ProjectTitle {
     text-align: center;
+    font-family: 'Arial';
+
 }
 
 .ProjectDescriptionContainer {
@@ -64,6 +66,8 @@
 .ProjectTagsTitle {
     margin-top: 15px;
     text-align: start;
+    font-family: 'Arial';
+
 }
 
 .ProjectButtons {
@@ -83,6 +87,8 @@
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     transition: all 0.3s ease;
+    font-family: 'Arial';
+
 
 }
 
