--- a/src/app/components/SkillsComponent.module.css
+++ b/src/app/components/SkillsComponent.module.css
@@ -1,6 +1,7 @@
 .SkillsTag {
     padding-inline: 15px;
     padding-block: 10px;
+    font-family: 'Arial';
 
     border: 2px solid black;
     border-radius: 1rem;
@@ -9,6 +10,7 @@
 .SkillsTag:hover {
     background-color: #000;
     color: #f2f2f2;
+    
     transform: scale(1.1);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
