--- a/src/app/components/TopBarComponent.module.css
+++ b/src/app/components/TopBarComponent.module.css
@@ -38,17 +38,22 @@
     font-weight: 400;
     text-decoration: none;
     font-size: 20px;
+    font-family: 'Arial';
+
     transition: all 0.3s ease-in-out;
 }
 
 .NavBarContentTextSelected {
     font-weight: bolder;
+    font-family: 'Arial';
+
     font-size: 20px;
 }
 
 .NavBarContentText:hover {
     cursor: pointer;
     font-weight: bolder;
+    
     transition: all 0.3s ease-in-out;
 }
 
