--- a/src/app/sections/LandingSection.module.css
+++ b/src/app/sections/LandingSection.module.css
@@ -42,6 +42,7 @@
 
 .pdNameH1 {
     font-size: 5rem;
+    font-family: 'Arial';
     font-weight: bold;
     margin: 0;
     padding: 0;
@@ -51,6 +52,7 @@
 .skillsTitle {
     font-size: 3rem;
     font-weight: bold;
+    font-family: 'Arial';
     margin: 0;
     padding: 0;
 }
@@ -72,12 +74,14 @@
     text-decoration: none;
     font-weight: 500;
     color: black;
+    font-family: 'Arial';
     transition: all 0.5s ease;
 }
 .clickableButton:hover {
-    font-weight: bold;
+
     color: rgb(48, 87, 186);
     text-shadow: 0 0 2px yellow;
+
     transition: all 0.5s ease;
 }
 
