--- a/src/app/sections/ProjectsSection.module.css
+++ b/src/app/sections/ProjectsSection.module.css
@@ -42,6 +42,8 @@
     color: white;
     margin: 0;
     padding: 0;
+    font-family: 'Arial';
+
 }
 
 /* Display the project cards in a grid that expands virtically as the page width decreases */
