--- a/src/app/components/TopBarComponent.module.css
+++ b/src/app/components/TopBarComponent.module.css
@@ -5,6 +5,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: rgb(64, 64, 64);
+    position: fixed;
+    top: 0;
+    box-shadow: 0px 0px 10px 0px black;
 }
 .NavBarLeftContainer {
     width: 50%;
