--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,34 @@
     padding: 0;
     font-family: 'Arial';
 }
+
+.LoadingCover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1001;
+    animation: fadeOut 2s ease;
+    pointer-events: none; /* Add this line */
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    25% {
+        opacity: 1;
+    }
+    99% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
