--- a/components/TopBarComponent.module.css
+++ b/components/TopBarComponent.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(64, 64, 64);
+    background-color: black;
     position: fixed;
     top: 0;
     box-shadow: 0px 0px 10px 0px black;
@@ -33,6 +33,8 @@
     align-items: center;
     padding-inline: 20px;
     text-decoration: none;
+
+    width: 70px;
 }
 
 .NavBarContentText {
