--- a/components/sections/ProjectsSection.module.css
+++ b/components/sections/ProjectsSection.module.css
@@ -1,10 +1,10 @@
 /* ProjectsSection.module.css */
 .projectsContainer {
-    background-color: #404040;
+    background-color: black;
 }
 
 .contentArea {
-    background-color: #404040;
+    background-color: black;
     padding: 50px;
     padding-inline: 200px;
     padding-bottom: 150px;
@@ -34,6 +34,7 @@
     align-items: center;
     justify-content: flex-start;
     z-index: 4;
+    padding-bottom: 40px;
 }
 
 .title {
